# changelogs-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  action.yml  install.sh  vercel.json
.changelog/: 9ad60315.md  README.md  bold-geese-eat.md  config.toml  cute-moons-rest.md  dark-winds-chirp.md  docs-demo.md  dull-foxes-buzz.md  eager-frogs-slide.md  evil-pandas-roar.md  fair-geese-swim.md  fast-fish-sing.md  jolly-bats-slide.md  keen-lakes-drink.md  mild-goats-cry.md  neat-pigs-clean.md  odd-goats-dance.md  plain-frogs-hum.md  quick-whales-dance.md  rare-crabs-cry.md  rich-clams-wash.md  shy-bats-wave.md  weak-rocks-nod.md  zesty-owls-paint.md
.changeset/: README.md  config.toml
.github/actions/ai-changeset/: action.yml
.github/workflows/: binaries.yml  binary.yml  changelog.yml  changeset.yml  ci.yml  release.yml  test-check-action.yml
bot/: .env  .env.example  .gitignore  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  wrangler.jsonc
bot/api/: webhook.ts
bot/lib/: ai.test.ts  ai.ts  comment.test.ts  comment.ts  github.test.ts  github.ts
check/: action.yml
src/: changelog.rs  changelog_entry.rs  changelog_writer.rs  changeset.rs  config.rs  error.rs  graph.rs  lib.rs  main.rs  plan.rs  version_editor.rs  workspace.rs
src/cli/: add.rs  doctor.rs  init.rs  mod.rs  publish.rs  status.rs  up.rs  version.rs
src/ecosystem/: cargo.rs  mod.rs  python.rs
src/ecosystems/: mod.rs  python.rs  rust.rs  typescript.rs
tests/: ecosystem_integration.rs  golden.rs  python_adapter.rs
tests/fixtures/: README.md
(+67 files in other folders)
