[package]
name = "changelogs"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wevm/changelogs-rs"
description = "Manage versioning and changelogs for Cargo workspaces"
keywords = ["changelog", "versioning", "monorepo", "cargo", "workspace"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.85"

[[bin]]
name = "changelogs"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
inquire = { version = "0.9", features = ["editor"] }
console = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
serde_yaml = "0.9"

# Versioning
semver = { version = "1", features = ["serde"] }

# Cargo/workspace
cargo_metadata = "0.19"

# Graph
petgraph = "0.7"

# Errors
thiserror = "2"
anyhow = "1"

# Utils
rand = "0.9"
chrono = "0.4"
regex = "1"

# HTTP (for PyPI API)
ureq = { version = "2", features = ["json"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
